# PhiQLater

./: #View.glade#  .gitignore  CMakeLists.txt  CMakePresets.json  PhiQLater.cmb  README.md  View.glade  calc_row.ui  compile_commands.json  compile_flags.txt  install.sh  main  main.c  phiqlater.flatpak  phiqlater.ui  update.sh
.cache/clangd/index/: main.c.94C7A8A12266B11A.idx
flatpak/: de.aurus28.PhiQLater.json  flatpak-instructions-for-me.md
resources/: PhiQLater.cmb  calc_row.ui  phiqlater.gresource.xml  phiqlater.ui
